fixed the preview from collapsing on some window resize events. Updated links to proper formating and changed some words on the main page

--- a/app/assets/stylesheets/course_card.css.scss
+++ b/app/assets/stylesheets/course_card.css.scss
@@ -80,7 +80,7 @@ table.course-stats td{
   float:right;
 }
 .course-card-header .course-title{
-  width:80%;
+  width:100%;
   min-height:90px;
   display:inline-block;
 }
@@ -105,7 +105,9 @@ span.big-name{
 }
 .course-description p {
   max-height:240px;
-  overflow:scroll;
+  overflow:auto;
+  overflow-y:auto;
+  overflow-x:hidden;
   padding-bottom: 20px;
   padding-right: 20px;
 }
